--- a/front-end/manifest.json
+++ b/front-end/manifest.json
@@ -1,16 +1,11 @@
 {
-    "manifest_version": 3,
-    "name": "Sidebar Extension",
-    "version": "1.0",
-    "description": "Add a sidebar to all web pages",
-    "permissions": ["activeTab"],
-    "host_permissions": ["<all_urls>"],
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["scripts/content.js"],
-        "run_at": "document_end"
-      }
-    ]
+  "manifest_version": 3,
+  "name": "Sidebar Extension",
+  "version": "1.0",
+  "description": "Add a sidebar to all web pages",
+  "host_permissions": ["<all_urls>"],
+  "side_panel": {
+    "default_path": "scripts/sidepanel.html"
+  },
+  "permissions": ["bookmarks","sidePanel"]
 }
-  
