--- a/front-end/manifest.json
+++ b/front-end/manifest.json
@@ -8,5 +8,8 @@
   },
   "action": {
     "default_title": "Toggle Side Panel"
+  },
+  "side_panel": {
+    "default_path": "sidepanel.html"
   }
 }
