--- a/front-end/manifest.json
+++ b/front-end/manifest.json
@@ -9,7 +9,7 @@
   "side_panel": {
     "default_path": "sidepanel.html"
   },
-  "permissions": ["sidePanel", "contextMenus","bookmarks","favicon"],
+  "permissions": ["sidePanel", "contextMenus","bookmarks","favicon","history"],
   "host_permissions": [
     "https://asia-northeast1-bookmarkai-414803.cloudfunctions.net/*"
   ],
